add basic debug info

--- a/lab1_sfml/lab1_sfml/lab1_sfml.vcxproj.filters
+++ b/lab1_sfml/lab1_sfml/lab1_sfml.vcxproj.filters
@@ -23,5 +23,6 @@
       <Filter>Config</Filter>
     </ClInclude>
     <ClInclude Include="Camera.hpp" />
+    <ClInclude Include="Globals.hpp" />
   </ItemGroup>
 </Project>
